# Quake.cpp

./: .gitignore  CMakeLists.txt  build_and_log.bat  run_analysis.bat
src/: audio.cpp  audio.hpp  bspfile.hpp  cd_sdl.cpp  chase.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_tent.cpp  client.cpp  client.h  client.hpp  cmd.cpp  cmd.hpp  common.cpp  common.hpp  console.cpp  console.hpp  crc.cpp  crc.hpp  cvar.cpp  cvar.hpp  d_edge.cpp  d_fill.cpp  d_init.cpp  d_local.hpp  d_modech.cpp  d_part.cpp  d_polyse.cpp  d_scan.cpp  d_sky.cpp  d_sprite.cpp  d_surf.cpp  d_vars.cpp  d_zpoint.cpp  draw.c  draw.cpp  draw.hpp  (+91 more)
